--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,5 +1,14 @@
+html, body, #root {
+  margin: 0;
+  padding: 0;
+  clear: both;
+}
+
 .App {
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  height: 100vh;
 }
 
 .App-logo {
@@ -20,3 +29,16 @@
 .App-link {
   color: #09d3ac;
 }
+
+.display-flex {
+  display: flex;
+}
+
+.justify-content-space-around {
+  justify-content: space-around;
+}
+
+.width-100pct {
+  width: 100%;
+}
+
