--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -7,6 +7,7 @@ html, body, #root {
 .App {
   display: flex;
   flex-direction: column;
+  font-size: calc(12px + 1.5vw);
   text-align: center;
   height: 100vh;
 }
