--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,3 +1,16 @@
+/* Courier Font */
+@font-face {
+  font-family: 'Courier';
+  src: url('../../assets/fonts/courier_3/courier_3.eot') format('embedded-opentype'),
+       url('../../assets/fonts/courier_3/courier_3.woff2') format('woff2'),
+       url('../../assets/fonts/courier_3/courier_3.woff') format('woff'),
+       url('../../assets/fonts/courier_3/courier_3.ttf') format('truetype'),
+       url('../../assets/fonts/courier_3/courier_3.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 html, body, #root {
   margin: 0;
   padding: 0;
@@ -7,7 +20,8 @@ html, body, #root {
 .App {
   display: flex;
   flex-direction: column;
-  font-size: calc(12px + 1.5vw);
+  font-family: Courier, 'Courier New', sans-serif;
+  font-size: calc(16px + 1.5vw);
   text-align: center;
   height: 100vh;
 }
