--- a/src/components/main/mainContent/myWork.css
+++ b/src/components/main/mainContent/myWork.css
@@ -10,7 +10,7 @@
 	margin: auto;
 }
 .project {
-  background-color: black;
+  background-color: white;
   border-radius: 1.25rem;
   height: 100%;
 }
