--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -15,15 +15,15 @@ html, body, #root {
   margin: 0;
   padding: 0;
   clear: both;
+  font-family: Courier, 'Courier New', sans-serif;
+  font-size: calc(20px + 1vw);
 }
 
 .App {
   display: flex;
   flex-direction: column;
-  font-family: Courier, 'Courier New', sans-serif;
-  font-size: calc(16px + 1.5vw);
   text-align: center;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .App-logo {
