--- a/src/components/main/mainContent.css
+++ b/src/components/main/mainContent.css
@@ -2,11 +2,15 @@
     align-items: center;
     display: flex;
     width: 100%;
-    height: calc(100% - 2rem);
+    height: 100%; 
     justify-content: space-between;
     flex-direction: row;
 }
 #scroll-content {
     height: calc(100% - 2rem);
     width: 100%;
+}
+
+#scroll-content h2 {
+  margin: 1rem auto;
 }
