--- a/src/components/main/mainContent/myWork/project.css
+++ b/src/components/main/mainContent/myWork/project.css
@@ -1,7 +1,12 @@
 .project {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  font-size: .75rem;
+  text-align: left;
+}
+
+.project p {
+  margin: .75rem 0 0 0;
 }
 
 .project-image {
