--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -1,9 +1,15 @@
 #main {
   align-items: center;
-  background-color: pink;
   display: inherit; /* flex */
   flex: 1; /* element will stretch */
   justify-content: center; 
   margin: 0 auto;
   width: calc(100% - 2rem);
+}
+#main-content {
+    height: calc(100% - 2rem);
+    width: 100%;
+}
+#main-content h2 {
+  margin: 1rem auto;
 }
