--- a/src/components/main/projects/projects.css
+++ b/src/components/main/projects/projects.css
@@ -13,18 +13,20 @@
   position: relative;
   padding-top: 100%; /* to ensure content is centered and this element is square */
 }
-.project .text {
+.project .text, .project .image {
   position: absolute;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%; 
 }
+
+.project .text {
+  left: .7rem;
+  height: 100%;
+  width: calc(100% - 1.4rem); 
+}
+
 .project .image {
   border-radius: 1.25rem;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%; 
 }
