--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -24,7 +24,8 @@ html, body, #root {
   --color-background: #edddd4;
   --color-foreground: #197278; /* dark teal */
   --color-dark: #283d38; /* brackish */
-  --color-accent: #c44536; /* light orange */
+  --color-accent: indigo; /* indigo */
+  /* --color-accent: #c44536;  light orange */
   --color-dark-accent: #772e25; /* rust */
 }
 
