--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,8 @@
 #header {
-  /* background-color: var(--color-accent) */
-  flex: 0; /* element won't flex */
-  margin: 0 auto 0 auto; /* center this element */
-  padding-top: 1rem;
-  width: calc(100% - 2rem); /* take total width minus margin space */
+  /* background-color: var(--color-accent); */
+  padding: 1rem;              
+  width: calc(100vw - 2rem);  /* expand size, account for padding */
+  position: relative;         /* keep relative but expand */
+  left: 50%;                  /* push start pos to middle */
+  margin-left: -50vw;         /* pull back to left of viewport */
 }
