--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -1,17 +1,12 @@
 #main {
   display: inherit; /* flex */
-  flex: 1; /* element will stretch */
-  margin: 0 auto;
-  width: calc(100% - 2rem);
+  /* margin: 0 auto; */
+  /* width: calc(100% - 2rem); */
 }
 #main-content {
     height: calc(100% - 2rem);
     width: 100%;
 }
 #main-content h2 {
-  margin: 1rem auto;
-}
-
-#main  [class^="icon"]{
-  font-size: 2rem;
+  margin-top: 1rem;
 }
