--- a/src/components/main/projects/projects.css
+++ b/src/components/main/projects/projects.css
@@ -1,14 +1,10 @@
-#my-work {
-    flex: 1;
-}
-
 #projects {
-    display: grid;
+  display: grid;
 	gap: 1rem;
-	grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+  /* grid-template-columns: repeat(auto-fit, minmax(375px, 1fr)); */
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 }
 .project {
-  background-color: cadetblue;
   border-radius: 1.25rem;
   position: relative;
   padding-top: 100%; /* to ensure content is centered and this element is square */
