Made module to create and check for cookies, and animating title appropriately in case cookies exist

--- a/src/components/header/titleImage/titleImage.css
+++ b/src/components/header/titleImage/titleImage.css
@@ -59,6 +59,11 @@ path {
     stroke: black;
     stroke-width: 3px;
   }
+
+  .visible {
+    stroke: black;
+    stroke-width: 3px;
+  }
   
   .fadeIn {
     -webkit-animation-duration: 1s;
