Added fade-in animation

--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -64,16 +64,25 @@ html, body, #root {
 .justify-content-space-around {
   justify-content: space-around;
 }
+
+.width-100pct {
+  width: 100%;
+}
  
 /********
 * Class to define opacity, will change
 * with animations (for all content except title
 ********/
 .to-fade-in {
-  opacity: 0;
+  /* opacity: 0; */
+  animation: fade-in 5s;
 }
 
-.width-100pct {
-  width: 100%;
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
-
