--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -65,6 +65,10 @@ html, body, #root {
   justify-content: space-around;
 }
 
+.opacity-0 {
+  opacity: 0;
+}
+
 .width-100pct {
   width: 100%;
 }
@@ -73,7 +77,8 @@ html, body, #root {
 * Class to define opacity, will change
 * with animations (for all content except title
 ********/
-.to-fade-in {
+
+.fade-in {
   /* opacity: 0; */
   animation: fade-in 5s;
 }
