--- a/src/components/main/projects/projects.css
+++ b/src/components/main/projects/projects.css
@@ -2,4 +2,11 @@
   display: grid;
 	gap: .5rem;
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  font-size: calc(20px + 100%);
+}
+
+@media only screen and (min-width:500px) {
+  #projects {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
 }
