Changed font size to ensure things fit in project boxes, added margin-top to titleImage element

--- a/src/components/header/titleImage/titleImage.css
+++ b/src/components/header/titleImage/titleImage.css
@@ -1,5 +1,4 @@
 /* animations */
-
 path {
     fill:none;
   }
@@ -64,3 +63,8 @@ path {
     stroke: black;
     stroke-width: 3px;
   }
+
+/* General */
+.titleImage {
+  margin-top: 1rem;
+}
