--- a/src/components/main/projects/project/project.css
+++ b/src/components/main/projects/project/project.css
@@ -9,6 +9,10 @@
   text-align: left;
 }
 
+.project a {
+  color: white;
+}
+
 .project h3 {
   margin-bottom: 0;
 }
@@ -38,12 +42,16 @@
   width: calc(100% - 1.4rem); 
 }
 
+.project .text h3 {
+  /* z-index: 8; */
+}
+
 .project .image {
   border-radius: 1rem;
 }
 
 @media only screen and (min-width:500px) {
   .project {
-    font-size: .75rem;
+    font-size: 21px;
   }
 }
