--- a/src/components/main/projects/projects.css
+++ b/src/components/main/projects/projects.css
@@ -4,6 +4,12 @@
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
 }
 
+#projects a {
+  color: white;
+  position: relative;
+  z-index: 1;
+}
+
 @media only screen and (min-width:500px) {
   #projects {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
