Updated styling on a elements in cards to ensure proper color on hover

--- a/src/components/main/projects/projects.css
+++ b/src/components/main/projects/projects.css
@@ -6,7 +6,10 @@
 
 #projects a {
   color: white;
-  position: relative;
+}
+
+#projects a:hover {
+  color: var(--color-accent);
 }
 
 @media only screen and (min-width:500px) {
