--- a/src/components/main/projects/project/project.css
+++ b/src/components/main/projects/project/project.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   padding-top: 100%; /* to ensure content is centered and this element is square */
-  font-size: 16px;
+  font-size: 18px;
   position: relative;
   text-align: left;
 }
@@ -29,6 +29,7 @@
   left: 0;
   height: 100%;
   width: 100%; 
+  overflow: hidden;
 }
 
 .project .text {
