--- a/src/components/main/aboutMe/aboutMe.css
+++ b/src/components/main/aboutMe/aboutMe.css
@@ -6,6 +6,11 @@ p {
     margin: 1rem 0 0 0;
 }
 
+#about-me p:first-of-type {
+  margin: 0;
+}
+
+
 .icon-right-open, .icon-left-open {
     align-self: center;
 }
