--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -9,5 +9,8 @@
     width: 100%;
 }
 #main-content h2 {
-  margin: 0 auto 1rem auto;
+  margin: 0 auto;
+}
+#title-block {
+  padding-bottom: 1rem;
 }
