--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,14 +4,13 @@ nav {
 
 nav [class^="icon"] {
   font-size: 1.5rem;
-  color: pink;
 }
 
 nav a {
-  color: inherit;
+  color: var(--color-dark);
   text-decoration: none;
 }
 
-nav .icon:hover {
+nav a:hover {
   color: var(--color-accent);
 }
