--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,6 @@
 nav {
-  margin-top: 1rem;
+  padding: .5rem 0;
+	background-color: var(--color-foreground);
 }
 
 nav [class^="icon"] {
@@ -7,7 +8,7 @@ nav [class^="icon"] {
 }
 
 nav a {
-  color: var(--color-dark);
+  color: var(--color-background);
   text-decoration: none;
 }
 
