--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -30,7 +30,7 @@ html, body, #root {
 #app {
   background-color: var(--color-background);
   text-align: center;
-  min-height: calc(100vh - 2rem);
+  min-height: 100vh;
 }
 
 /* General Use Shared Classes */
