--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -42,7 +42,8 @@ html, body, #root {
 }
 
 #page {
-	margin: 1rem;
+	margin: 1rem 1rem 0 1rem;
+	padding-bottom: 1rem;
 }
 
 /* General Use Shared Classes */
