--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -1,6 +1,10 @@
 #contact-form {
+	background-color:pink;
+	display: inline-block;
 	min-width: calc(320px - 2rem);
-	max-width: 700px;
+	margin: 0px!important;
+	padding: 0px;
+	width: 400px;
 }
 
 #contact-form input, textarea {
@@ -10,6 +14,10 @@
 	font-size: 1rem;
 	padding: .5rem;
 	width: calc(100% - 1rem);
+}
+
+#contact-form button {
+  float: right;
 }
 
 #contact-form textarea {
