--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -1,15 +1,12 @@
 #about {
     text-align: left;
+		max-width: 1000px;
 }
 
-p {
+#about p {
     margin: 1rem 0 0 0;
 }
 
 #about p:first-of-type {
   margin: 0;
-}
-
-.icon-right-open, .icon-left-open {
-    align-self: center;
 }
