--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -3,7 +3,8 @@
 	min-width: calc(320px - 2rem);
 	margin: 0px!important;
 	padding: 0px;
-	width: 400px;
+	max-width: 100vw;
+  width: 600px;
 }
 
 #contact-form input, textarea {
@@ -12,7 +13,7 @@
 	font-family: inherit;
 	font-size: .75rem;
 	padding: .33rem;
-	width: calc(100% - .7rem);
+	width: 100%;
 }
 
 #contact-form button {
