--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -22,6 +22,7 @@ html, body, #root {
 :root {
   --color-background: #edddd4;
   --color-foreground: #197278; /* dark teal */
+	--color-foreground-20-percent: #8cb8bc;
   --color-dark: black;
   --color-accent: #827a75;
   --color-dark-accent: #772e25; /* rust */
@@ -51,7 +52,7 @@ html, body, #root {
 }
 
 #page-content a:hover {
-	opacity: .6;
+	color: var(--color-foreground-20-percent);
 }
 
 /* General Use Shared Classes */
