--- a/src/pages/Project/Project.css
+++ b/src/pages/Project/Project.css
@@ -1,23 +1,31 @@
 .project {
-	position: relative;
+	align-items: center;
+	display: flex;
+	justify-content: center;
+	overflow: hidden;
+	width: calc(100vw - 12px);
+	height: calc(100vw - 12px);
 }
 
-.project > * {
-	border-radius: 10px;
+@media only screen and (min-width:500px) {
+  .project {
+		height: 400px;
+		width: 400px;
+		border-radius: 10px;
+  }
 }
 
 .project .image {
     width:100%;
-    /* vertical-align:top; */
 }
 
 .detail {
 	color: white;
 	background-color: var(--color-dark);
 	font-size: 20px;
-	height: calc(100% - 6px); /* parent is a bit taller than images, subtract 6px to match */
 	margin: 0;
 	width: 100%;
+	height: 100%;
 }
 
 .detail .inner {
