--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -1,19 +1,13 @@
 #projects {
-  display: grid;
-	gap: .5rem;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-}
-
-#projects a {
-  color: white;
-}
-
-#projects a:hover {
-  color: var(--color-accent);
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem;
+	justify-content: center;
 }
 
 @media only screen and (min-width:500px) {
   #projects {
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+		max-width: 2000px;
+		
   }
 }
